--- a/HTML/Odin Project Course/html-boilerplate/index.html
+++ b/HTML/Odin Project Course/html-boilerplate/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Trying out html for fun</title>
+    </head>
+
+    <body>
+        <h1>What'd you think about the page?</h1>
+    </body>
+
 </html>
