workin' on tags

--- a/HTML/Odin Project Course/template.html
+++ b/HTML/Odin Project Course/template.html
@@ -6,6 +6,29 @@
     <title>My First Webpage</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h3>Hello World!</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed
+      egestas egestas fringilla phasellus faucibus. Purus ut faucibus pulvinar
+      elementum. Consectetur adipiscing elit pellentesque habitant morbi. Morbi
+      tristique senectus et <strong><i>et malesuada</i></strong> fames ac. 
+      <p>Facilisis volutpat
+      est velit egestas. Sollicitudin aliquam ultrices sagittis orci. Pulvinar
+      etiam non quam lacus. Ullamcorper dignissim cras tincidunt lobortis
+      feugiat. Velit dignissim sodales ut eu sem integer.</p> Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Morbi tristique senectus et netus et malesuada fames ac. Laoreet id donec ultrices tincidunt arcu non sodales. Malesuada pellentesque elit eget gravida cum sociis. Imperdiet massa tincidunt nunc pulvinar sapien. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque.  
+      Adipiscing elit pellentesque habitant morbi tristique senectus et:</p>
+    <!-- Do not change the original 1st paragraph -->
+
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+
+    <ol>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ol>
   </body>
 </html>
