--- a/HTML/Odin Project Course/html-boilerplate/index.html
+++ b/HTML/Odin Project Course/html-boilerplate/index.html
@@ -21,17 +21,26 @@
       feugiat. Velit dignissim sodales ut eu sem integer.</p> Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Morbi tristique senectus et netus et malesuada fames ac. Laoreet id donec ultrices tincidunt arcu non sodales. Malesuada pellentesque elit eget gravida cum sociis. Imperdiet massa tincidunt nunc pulvinar sapien. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque.  
       Adipiscing elit pellentesque habitant morbi tristique senectus et:</p>
     <!-- Do not change the original 1st paragraph -->
-
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
+    <p><strong>Here's the most popular ranking for the top 5 Greatest NBA Players
+    of All Time:</strong></p>
+    </strong></p>
+    
 
     <ol>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
+      <li>Michael Jordan</li>
+      <li>Lebron James</li>
+      <li>Kobe Bryant</li>
+      <li>Kareem Abdul Jabbar</li>
+      <li>Wilt Chamberlain</li>
     </ol>
+
+    <p><em>These are the aspects that were taken into account in order to make
+        the top:</em></p>  
+    <ul>
+        <li>Individual Accolades</li>
+        <li>Career Averages</li>
+        <li>Collective achievements</li>
+        <li>Total-Carreer Numbers</li>
+      </ul>
   </body>
 </html>
