--- a/HTML/Odin Project Course/Foundations Course/template.html
+++ b/HTML/Odin Project Course/Foundations Course/template.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<!-- Basic html boilerplate (leave one space at each side of a comment) -->
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>My First Webpage</title>
   </head>
   <body>
