Trying out signed commits

--- a/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/pages/about.html
+++ b/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/pages/about.html
@@ -8,7 +8,7 @@
   <body>
     <h2>About Page</h2>
     <p>This is just a test paragraph to check that the hyperlink found on the index
-        page works correctly</p>
+        page works correctly.</p>
     <img alt="Michi in a casual pic" width=400px height=auto 
     src="../images/michi.jpeg">
   </body>
