--- a/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
+++ b/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
@@ -9,13 +9,16 @@
     <h2>Homepage</h2>
 
     
-    <p><a href="https://github.com/jpsanchezm1/CODING">Click here to know more about
-        the Coding Journey</a></p>
+    <p>To know more about the Coding Journey click
+      <a href="https://github.com/jpsanchezm1/CODING">here.</a></p>
     <p> <a href="./pages/about.html">For more information about the guide course 
-    click here</a> &nbsp; </p>
+      click here</a></p>
+    <p>For a basic show off of the different
+      types of image that you can find on the internet click&nbsp;
+      <a href="./pages/image-types-show-off.html">here</a></p>
     <!-- &nbsp; For a horizontal space -->
-    <img alt="Michi in a casual pic" width=400px height=auto 
-    src="./images/michi.jpeg">
+    <img alt="Michi in a casual pic" width=600px height=auto 
+      src="./images/html-backg.jpeg">
     
 </body>
 
