--- a/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/pages/about.html
+++ b/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/pages/about.html
@@ -9,7 +9,35 @@
     <h2>About Page</h2>
     <p>This is just a test paragraph to check that the hyperlink found on the index
         page works correctly.</p>
-    <img alt="Michi in a casual pic" width=400px height=auto 
-    src="../images/michi.jpeg">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+       tempor incididunt ut labore et dolore magna aliqua. Nulla aliquet enim
+        tortor at auctor. Mauris rhoncus aenean vel elit scelerisque mauris 
+        pellentesque pulvinar. At erat pellentesque adipiscing commodo elit 
+        at imperdiet dui. In hac habitasse platea dictumst. Erat nam at lectus 
+        urna duis convallis. Purus sit amet volutpat consequat mauris nunc 
+        congue nisi. Purus ut faucibus pulvinar elementum integer enim
+        tortor at auctor. Mauris rhoncus aenean vel elit scelerisque mauris 
+        pellentesque pulvinar. At erat pellentesque adipiscing commodo elit 
+        at imperdiet dui. In hac habitasse platea dictumst. Erat nam at lectus 
+        urna duis convallis. Purus sit amet volutpat consequat mauris nunc 
+        congue nisi. Purus ut faucibus pulvinar elementum integer enim  
+        proin libero nunc. Non consectetur a erate.</p>
+    <img alt="Michi in a casual pic" width=300px height=auto 
+        src="../images/michi.jpeg">
+    <p>Tincidunt id aliquet risus feugiat. Nunc sed blandit libero volutpat.
+         Integer eget aliquet nibh praesent. Sit amet porttitor eget dolor morbi
+        non arcu. Eget arcu dictum varius duis at. Ipsum suspendisse ultrices
+        gravida dictum fusce ut. Vestibulum mattis ullamcorper velit sed
+        ullamcorper. Cursus turpis massa tincidunt dui ut ornare lectus.
+        tortor at auctor. Mauris rhoncus aenean vel elit scelerisque mauris 
+        pellentesque pulvinar. At erat pellentesque adipiscing commodo elit 
+        at imperdiet dui. In hac habitasse platea dictumst. Erat nam at lectus 
+        urna duis convallis. Purus sit amet volutpat consequat mauris nunc 
+        congue nisi. Purus ut faucibus pulvinar elementum integer enim 
+        Sodales neque sodales ut etiam sit. Mi ipsum faucibus vitae aliquet
+        nec ullamcorper</p>
+    
+    <img alt="Michi in a casual pic" width=300px height=auto 
+        src="../images/dog.jpeg">
   </body>
 </html>
