--- a/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
+++ b/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
@@ -14,7 +14,7 @@
     <p> <a href="./pages/about.html">For more information about the guide course 
       click here</a></p>
     <p>For a basic show off of the different
-      types of image that you can find on the internet click&nbsp;
+      types of image that you can find on the internet click
       <a href="./pages/image-types-show-off.html">here</a></p>
     <!-- &nbsp; For a horizontal space -->
     <img alt="Michi in a casual pic" width=600px height=auto 
