--- a/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
+++ b/HTML/Odin Project Course/Foundations Course/2) odin-links-and-images/index.html
@@ -9,16 +9,18 @@
     <h2>Homepage</h2>
 
     
-    <p>To know more about the Coding Journey click
-      <a href="https://github.com/jpsanchezm1/CODING">here.</a></p>
-    <p> <a href="./pages/about.html">For more information about the guide course 
-      click here</a></p>
+    <p>For consulting more detailed info about the Homepage, click
+      <a href="./pages/about.html">here</a></p>
     <p>For a basic show off of the different
       types of image that you can find on the internet click
       <a href="./pages/image-types-show-off.html">here</a></p>
     <!-- &nbsp; For a horizontal space -->
     <img alt="Michi in a casual pic" width=600px height=auto 
       src="./images/html-backg.jpeg">
+    <p>To know more about the Coding Journey Repository click
+        <a href="https://github.com/jpsanchezm1/CODING">here.</a></p>
+    <p>For more information about the guide course 
+      click here<a href="https://www.theodinproject.com/paths">here</a></p>
     
 </body>
 
